@@ -32,6 +32,12 @@ Core and Builtins
 Library
 -------
 
+- Issue #18919: If the close() method of a writer in the sunau or wave module
+  failed, second invocation of close() and destructor no more raise an
+  exception.  Second invocation of close() on sunau writer now has no effects.
+  The aifc module now accepts lower case of names of the 'ulaw' and 'alaw'
+  codecs.
+
 - Issue #19131: The aifc module now correctly reads and writes sampwidth of
   compressed streams.
 
